# OHOS_L0_adapter

./: LICENSE  README.md  ohos_l0_adapter.md  openharmoy_l0_adapter.md
code/native_system/adapter/: readme
code/native_system/adapter/common/: adapter_common.h
code/native_system/adapter/liteos/: adapter_liteos.h
code/native_system/adapter/ohos/: adapter_fs.h  adapter_ohos.h
code/native_system/adapter/posix/: adapter_posix.h
code/native_system/cmsis/: readme
code/native_system/cmsis/cmsis/Source/: cmsis_os2.c
code/native_system/demo/ohos/: CMakeLists.txt  main.c  ohos-demo.c  ohos-main.c
code/native_system/ld/: link.ld
code/native_system/mbedtls/: build_info.h  config_liteos_m.h  readme
code/native_system/rtos/freertos/: event_groups.c  queue.c  stream_buffer.c  tasks.c  timers.c
code/native_system/rtos/freertos/include/: FreeRTOS.h  atomic.h  task.h
code/ohos/device/qemu/L0_xts_demo/: BUILD.gn  README.md  README_zh.md  ohos.build
code/ohos/device/qemu/L0_xts_demo/liteos_m/: BUILD.gn  config.gni
code/ohos/device/qemu/L0_xts_demo/liteos_m/board/fs/littlefs/: BUILD.gn
code/ohos/device/qemu/L0_xts_demo/liteos_m/board/fs/littlefs/include/: littlefs.h
code/ohos/device/qemu/L0_xts_demo/liteos_m/board/fs/littlefs/src/: fs_init.c  littlefs.c
code/ohos/patchs/base/hiviewdfx/hiview_lite/: 0001-output_option.patch  0002-adapter.patch
code/ohos/patchs/base/security/huks/: 0001-mutex.patch
code/ohos/patchs/base/startup/bootstrap_lite/: 0001-macro.patch
code/ohos/patchs/foundation/ability/ability_lite/: 0001-fix-bug.patch
(+36 files in other folders)
