# Copyright (c) 2022 Talkweb Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  if (defined(LOSCFG_FS_LITTLEFS) && defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI)) {
    sources = [
      "src/fs_init.c",
      "src/littlefs.c",
    ]
  }
}

config("public") {
  if (defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI)) {
    include_dirs = [
      "include",
      "//drivers/framework/include/platform",
      "//drivers/framework/include/utils",
      "//drivers/adapter/khdf/liteos_m/osal/include",
      "//drivers/framework/include/osal",
      "//drivers/framework/include/core",
      "//drivers/framework/core/common/include/host"
    ]
  }
}